@@ -105,8 +105,8 @@ divide_init( void )
 {
   int error;
 
-  libspectrum_ide_alloc( &divide_idechn0, LIBSPECTRUM_IDE_DATA16 );
-  libspectrum_ide_alloc( &divide_idechn1, LIBSPECTRUM_IDE_DATA16 );
+  divide_idechn0 = libspectrum_ide_alloc( LIBSPECTRUM_IDE_DATA16 );
+  divide_idechn1 = libspectrum_ide_alloc( LIBSPECTRUM_IDE_DATA16 );
   
   ui_menu_activate( UI_MENU_ITEM_MEDIA_IDE_DIVIDE_MASTER_EJECT, 0 );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_IDE_DIVIDE_SLAVE_EJECT, 0 );
