@@ -93,7 +93,7 @@ tape_event_record_sample( libspectrum_dword last_tstates, int type,
 
 int tape_init( void )
 {
-  libspectrum_tape_alloc( &tape );
+  tape = libspectrum_tape_alloc();
 
   play_event = debugger_event_register( event_type_string,
 					play_event_detail_string );
@@ -506,8 +506,7 @@ int tape_save_trap( void )
   /* Check we're in the right ROM */
   if( ! trap_check_rom() ) return 3;
 
-  /* Get a new block to store this data in */
-  libspectrum_tape_block_alloc( &block, LIBSPECTRUM_TAPE_BLOCK_ROM );
+  block = libspectrum_tape_block_alloc( LIBSPECTRUM_TAPE_BLOCK_ROM );
   
   /* The +2 here is for the flag and parity bytes */
   length = DE + 2;
@@ -799,7 +798,7 @@ tape_record_stop( void )
   error = event_remove_type( record_event );
   if( error ) return error;
 
-  libspectrum_tape_block_alloc( &block, LIBSPECTRUM_TAPE_BLOCK_RLE_PULSE );
+  block = libspectrum_tape_block_alloc( LIBSPECTRUM_TAPE_BLOCK_RLE_PULSE );
 
   libspectrum_tape_block_set_scale( block, rec_state.tstates_per_sample );
   libspectrum_tape_block_set_data_length( block, rec_state.tape_buffer_used );
